kubernetes/apps/default/stirling-pdf/app/keda-add-ons-http-interceptor-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-add-ons-http-interceptor-proxy
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.observability.svc.cluster.local
  ports:
    - port: 8081
