kubernetes/apps/default/stirling-pdf/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf-route
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - pdftools.harissaeed.com
  rules:
    - backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: observability
          port: 8080
